Bug: 759169 Reviewer: Peter Comment: Fix style for landing page folder descriptions to be visible

--- a/ssf/web/docroot/css/mashup.css
+++ b/ssf/web/docroot/css/mashup.css
@@ -135,7 +135,6 @@ div.ss_mashup_folder_header_view a span:hover {
   
 div.ss_mashup_folder_description {
   padding: 0px;
-  background: #ffffff !important;
   color: #505354;
   font-size: 14px;
   } 
