--- a/ssf/web/docroot/css/mashup_dark.css
+++ b/ssf/web/docroot/css/mashup_dark.css
@@ -143,7 +143,6 @@ div.ss_mashup_folder_description {
   padding: 5px 10px 5px 0px;
   color: #F6F6F6;
   font-size: 14px;
-  background: #ededed !important;
 }
 div.ss_mashup_folder_description p {
   margin: 0px;
